--- a/explana-api/src/main/resources/application.properties
+++ b/explana-api/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8080
+
+mongo.root-user=${MONGO_INITDB_ROOT_USERNAME}
+mongo.root-password=${MONGO_INITDB_ROOT_PASSWORD}
+mongo.host=${MONGO_HOST}
+mongo.database=${MONGO_INITDB_DATABASE}
