--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
         </dependency>
     </dependencies>
 
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>explana-api</module>
+    </modules>
+
     <build>
         <plugins>
             <plugin>
