ops: move deploy to deployments project

--- a/explana-api/Dockerfile
+++ b/explana-api/Dockerfile
@@ -1,4 +1,4 @@
-FROM adoptopenjdk:11-jre-openj9
+FROM adoptopenjdk/openjdk11
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} application.jar
 ENTRYPOINT ["java", "-jar", "application.jar"]
